--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -205,7 +205,7 @@
 }
 
 /* Small phones 0-480px */
-@media only screen and (max-width: 540px) {
+@media only screen and (max-width: 360px) {
     section {padding: 25% 0;}
     .logo-3 {
         height: 75px;
@@ -216,14 +216,14 @@
     .social-links {
         display: block;
         margin-left: 0px;
-        margin-right: 160px;
-        margin-top: -70px;
+        margin-right: 10px;
+        margin-top: -75px;
     }
     .slideshow-container {
-      max-width: 900px;
+      max-width: 300px;
       width: 450px;
       position: relative;
-      margin: 150px 0px 0px 15px;
+      margin: 50px 0px 0px 35px;
     }
     .js--main-nav {
         position: fixed;
@@ -245,36 +245,43 @@
         border-bottom: 0px; 
     }
     h1{
-        margin-left: 150px;
+        margin-left: 100px;
+        margin-top: -85px;
+        margin-bottom: 0px;
     }
     .bs-pic {
-        margin-left: 100px;
+        margin-left: 45px;
         height: 350px;
     }
     .about-us-text {
         text-align: center;
-        margin: 0 0;
-        width: 400px;
-        margin-top: 0px;
-        margin-right: 30px;
+        margin-left: 15px;
+        width: 300px;
+        margin-top: 40px;
+        margin-right: 20px;
+        margin-bottom: 0px;
     }
     h2 {
-        margin-left: 175px;
-        margin-top: -110px;
-    }
-    .piva-text {
+        margin-left: 120px;
         margin-top: -80px;
     }
+    .piva-text {
+        margin-top: -50px;
+        width: 350px;
+        margin-right: 0px;
+        margin-left: 0px;
+    }
     .crow-logo {
-        height: 80px;
+        height: 60px;
         border-radius: 50%;
-        margin-top: 30px;
+        margin-bottom: 30px;
+        margin-left: -10px;
     }
     .dogma-logo {
-        height: 80px;
+        height: 60px;
         border-radius: 50%;
-        margin-top: 30px;
-        margin-left: 30px;
+        margin-bottom: 30px;
+        margin-left: 20px;
     }
     .pivnice-2 {
         float: inherit;
@@ -283,56 +290,72 @@
         margin-top: 20px;
     }
     .zbir-logo {
-        height: 80px;
+        height: 60px;
         border-radius: 50%;
-        margin-top: 20px;
-        margin-left: 20px;
+        margin-top: -100px;
+        margin-left: -15px;
     }
     .primator-logo {
-        height: 100px;
+        height: 60px;
         border-radius: 50%;
-        margin-top: 20px;
-        margin-left: 30px;
+        margin-top: -100px;
+        margin-left: 25px;
     }
     .salto-logo {
-        height: 80px;
+        height: 60px;
         border-radius: 50%;
-        margin-top: 20px;
-        margin-left: 20px;
+        margin-top: -10px;
+        margin-left: -17px;
     }
     .kors-logo {
-        height: 80px;
+        height: 60px;
         border-radius: 50%;
-        margin-top: 20px;
-        margin-left: 35px;
+        margin-top: -10px;
+        margin-left: 20px;
     }
     h3 {
-        margin-left: 100px;
-        margin-top: -100px;
+        margin-left: 50px;
+        margin-top: -90px;
     }
     h4 {
         margin-top: -25px;
         margin-left: 0px;
         text-align: center;
     }
+    .taste-calculator {
+        margin-top: 35px;
+        margin-left: 0px;
+    }
     .taste-choise {
-        margin-right: 200px;
+        margin-top: -175px;
+        margin-right: 140px;
+        height: 100px;
+    }
+    .btn-pronadji {
+        display: inline-block;
+        font-size: 20px;
+        padding: 0 5px;
+        background-color: #e29407;
+        border: 1px solid #d38800;
+        height: 40px;
+        border-radius: 20%;
+        color: #d4d4d4;
     }
     .bottle-qm {
-        height: 300px;
-        margin-top: -100px;
+        height: 200px;
+        margin-top: -210px;
         margin-right: 0px;
     }
     h5 {
-        margin-left: 160px;
-        margin-top: -100px;
+        margin-left: 100px;
+        margin-top: -90px;
     }
     .info-p {
-        margin-left: 80px;
+        margin-left: 20px;
         margin-top: -30px;
     }
     .google-map {
-        width: 450px;
+        width: 350px;
         float: left;
     }
 }
