--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -213,6 +213,27 @@
         position: fixed;
         z-index: 100;
     }
+    .logo-3-moving {
+        height: 50px;
+    }
+    #myBtn {
+        display: none; /* Hidden by default */
+        position: fixed; /* Fixed/sticky position */
+        bottom: 20px; /* Place the button at the bottom of the page */
+        right: 30px; /* Place the button 30px from the right */
+        z-index: 99; /* Make sure it does not overlap */
+        border: none; /* Remove borders */
+        outline: none; /* Remove outline */
+        background-color: rgba(160, 160, 160, 0.53); /* Set a background color */
+        color: white; /* Text color */
+        cursor: pointer; /* Add a mouse pointer on hover */
+        padding-bottom: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        border-radius: 10px; /* Rounded corners */
+        font-size: 30px; /* Increase font size */
+        transition: 1s ease-out;
+    }
     .social-links {
         display: block;
         margin-left: 0px;
