--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -215,6 +215,7 @@
     }
     .logo-3-moving {
         height: 50px;
+        transition: 0.2s;
     }
     #myBtn {
         display: none; /* Hidden by default */
